# llilc

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OWNERS.TXT  README.md  netci.groovy
Documentation/: Areas-To-Contribute.md  Background.md  Code-Formatting.md  Contributing.md  Debugging.md  Developer-Workflow.md  Getting-Started-For-Linux-and-OS-X.md  Getting-Started-For-Windows.md  Long-Running-Branch-Workflow.md  Setup-With-LLILC-Out-Of-LLVM-Tree.md  Testing.md  Welcome.md  doxygen.cfg.in  index.dox  index.md  llilc-Coding-Conventions-and-Commenting-Style.md  llilc-arch.md  llilc-at-six-months.md  llilc-faq.md  llilc-gc-transition.md  llilc-gc.md  llilc-jit-eh.md  llilc-milestones.md  llilc-reader.md  msilc-gc.md  msilc-jit-eh.md
include/: CMakeLists.txt
include/CoreDisTools/: coredistools.h
include/GcInfo/: GcInfo.h  GcInfoUtil.h  Target.h  eexcp.h  gcinfoencoder.h  holder.h  pal.h  staticcontract.h  utilcode.h  winwrap.h
include/Jit/: EEMemoryManager.h  EEObjectLinkingLayer.h  LLILCJit.h  MSILCJit.h  compiler.h  global.h  jitoptions.h  jitpch.h  options.h  utility.h
include/Pal/: CMakeLists.txt  LLILCPal.h  MSILCPal.h  earlyincludes.h
include/Pal/Rt/: ole2.h  specstrings.h  windef.h  winerror.h
include/Reader/: abi.h  abisignature.h  bytecodetowvmcode.def  gverify.h  imeta.def  imeta.h  jit64.h  newvstate.h  ophelper.def  options.h  reader.h  readerenum.h  readerir.h  vtypeinfo.h  vtypeinfodbg.def  vtypeinfores.def
include/clr/: StaticContract.h  cor.h  corerror.h  corhdr.h  corinfo.h  corjit.h  misc.h  ntimage.h  switches.h
lib/: CMakeLists.txt
lib/CoreDisTools/: CMakeLists.txt  coredistools.cpp  coredistools.exports
lib/CoreDisTools/.nuget/: Microsoft.DotNet.CoreDisTools.nuspec  Microsoft.NETCore.CoreDisTools.nuspec  runtime.centos.7.1-x64.Microsoft.NETCore.CoreDisTools.nuspec  runtime.centos.7.1-x86.Microsoft.NETCore.CoreDisTools.nuspec  runtime.json  runtime.osx.10.10-x64.Microsoft.NETCore.CoreDisTools.nuspec  runtime.osx.10.10-x86.Microsoft.NETCore.CoreDisTools.nuspec  runtime.osx.10.11-x64.Microsoft.NETCore.CoreDisTools.nuspec  runtime.osx.10.11-x86.Microsoft.NETCore.CoreDisTools.nuspec  runtime.ubuntu.14.04-x64.Microsoft.NETCore.CoreDisTools.nuspec  runtime.ubuntu.14.04-x86.Microsoft.NETCore.CoreDisTools.nuspec  runtime.ubuntu.16.04-x64.Microsoft.NETCore.CoreDisTools.nuspec  runtime.ubuntu.16.04-x86.Microsoft.NETCore.CoreDisTools.nuspec  runtime.win-x64.Microsoft.NETCore.CoreDisTools.nuspec  runtime.win-x86.Microsoft.NETCore.CoreDisTools.nuspec  runtime.win7-x64.Microsoft.NETCore.CoreDisTools.nuspec  runtime.win7-x86.Microsoft.NETCore.CoreDisTools.nuspec  toolchain.osx.10.10-x64.Microsoft.DotNet.CoreDisTools.nuspec  toolchain.ubuntu.14.04-x64.Microsoft.DotNet.CoreDisTools.nuspec  toolchain.win7-x64.Microsoft.DotNet.CoreDisTools.nuspec
lib/GcInfo/: CMakeLists.txt  GcInfo.cpp  GcInfoUtil.cpp  gcinfoencoder.cpp
lib/Jit/: CMakeLists.txt  EEMemoryManager.cpp  LLILCJit.cpp  LLILCJit.exports  MSILCJit.cpp  jitoptions.cpp  jitpch.cpp  options.cpp  utility.cpp
lib/ObjWriter/: CMakeLists.txt  objwriter.cpp  objwriter.exports  objwriter.h  typeBuilder.cpp  typeBuilder.h
lib/ObjWriter/.nuget/: Microsoft.DotNet.ObjectWriter.nuspec  Microsoft.Dotnet.ObjectWriter.nuspec  runtime.json  toolchain.linux-x64.Microsoft.Dotnet.ObjectWriter.nuspec  toolchain.osx.10.10-x64.Microsoft.DotNet.ObjectWriter.nuspec  toolchain.ubuntu.14.04-x64.Microsoft.DotNet.ObjectWriter.nuspec  toolchain.win7-x64.Microsoft.DotNet.ObjectWriter.nuspec
lib/ObjWriter/.nuget/Linux/: Microsoft.Dotnet.ObjectWriter.nuspec
lib/Reader/: CMakeLists.txt  GenIRStubs.cpp  abi.cpp  abisignature.cpp  reader.cpp  readerir.cpp
test/: LLILCEnv.ps1  LLILCTestEnv.cmd  MSILCEnv.ps1  MSILCRegr.lst  add_i.base  applyfilter.py  arrayalloc.base  beq.base  beq_i.base  bug93.base  clt_u4.base  const.py  cyclic-type-graph.base  exclusion  exclusion.targets  field_tests.base  isinst.base  ldarga_i.base  ldarga_i4.base  ldc.base  ldftn.base  ldlen.base  ldloca.base  ldvirtftn.base  llilc_checkpass.py  llilc_hook.py  llilc_roslyn_stage.cmd  llilc_run.py  llilc_runtest.py  make_sln.py  neg.base  newobj.base  not.base  null_eh.base  objalloc.base  shl.base  shr.base  simplearrayalloc.base  sizeof.base  stringalloc.base  (+2 more)
test/BaseLine/JIT/CodeGenBringUpTests/: Add1.error.txt  And1.error.txt  AndRef.error.txt  Args4.error.txt  Args5.error.txt  AsgAdd1.error.txt  AsgAnd1.error.txt  AsgOr1.error.txt  AsgSub1.error.txt  AsgXor1.error.txt  BinaryRMW.error.txt  Call1.error.txt  CnsBool.error.txt  CnsLng1.error.txt  DblAdd.error.txt  DblAddConst.error.txt  DblArea.error.txt  DblArray.error.txt  DblAvg2.error.txt  DblAvg6.error.txt  DblCall1.error.txt  DblCall2.error.txt  DblDist.error.txt  DblDiv.error.txt  DblDivConst.error.txt  DblFillArray.error.txt  DblMul.error.txt  DblMulConst.error.txt  DblNeg.error.txt  DblRem.error.txt  DblRoots.error.txt  DblSub.error.txt  DblSubConst.error.txt  DblVar.error.txt  Eq1.error.txt  FPAdd.error.txt  FPAddConst.error.txt  FPArea.error.txt  FPArray.error.txt  FPAvg2.error.txt  (+87 more)
test/BaseLine/JIT/Directed/Arrays/: complex1.error.txt  simple1.error.txt
tools/Driver/: ReadMe.txt
utils/: BuildPackages.ps1  NuGet.config  ccformat.cmd  ccformat.py  make_package.py  packages.config
